--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="end">
 
     <include
-        layout="@layout/moshaverinpage2"
+        layout="@layout/pageporseshha2"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
