--- a/app/src/main/res/layout/pageporseshha2.xml
+++ b/app/src/main/res/layout/pageporseshha2.xml
@@ -38,8 +38,7 @@
         <TabHost
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@android:id/tabhost"
-            android:layout_weight="3">
+            android:id="@android:id/tabhost">
 
             <LinearLayout
                 android:layout_width="match_parent"
