--- a/app/src/main/res/layout/pageporseshha2.xml
+++ b/app/src/main/res/layout/pageporseshha2.xml
@@ -10,8 +10,9 @@
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="match_parent"
         android:id="@+id/toolbar2"
+        android:layout_weight="27"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
         <LinearLayout
