--- a/app/src/main/res/layout/pasoxesola_item.xml
+++ b/app/src/main/res/layout/pasoxesola_item.xml
@@ -1,6 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:gravity="center">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="asasadfddggdf"
+                android:layout_margin="4dp"
+                android:padding="3dp"
+                android:textColor="#e78f02"
+                android:textSize="20dp"
+                android:id="@+id/NameMoshaverTExtView"
+                android:gravity="right"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
+                android:layout_margin="4dp"
+                android:padding="3dp"
+                android:id="@+id/MatnePasoxTextView"
+                android:gravity="right"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_weight="1">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/dislike"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="1321"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/disLikeCountTextView"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_weight="1">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/like"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="1321"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/LikeCountTextView"
+                        android:gravity="right"/>
+                </LinearLayout>
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="3">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="60sp"
+                android:id="@+id/user_img"
+                app:civ_border_color="#a54"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:textColor="#0071f2"
+                android:id="@+id/TarixepasoxTextview"
+                android:layout_height="wrap_content"
+                android:text="13556"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
