--- a/app/src/main/res/layout/pasoxesola_item.xml
+++ b/app/src/main/res/layout/pasoxesola_item.xml
@@ -51,6 +51,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:id="@+id/dislikeImageview"
                         android:src="@drawable/dislike"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -68,6 +69,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:id="@+id/likeImageview"
                         android:src="@drawable/like"/>
                     <TextView
                         android:layout_width="wrap_content"
