--- a/app/src/main/res/layout/activity_tab1.xml
+++ b/app/src/main/res/layout/activity_tab1.xml
@@ -1,18 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="azad.hallaji.farzad.com.masirezendegi.Tab1">
+    android:orientation="vertical" >
 
-    <ListView
-        android:layout_width="368dp"
-        android:layout_height="551dp"
-        tools:ignore="MissingConstraints"
-        android:id="@+id/listView_Marakez"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"/>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="Do you want a fine accuracy or not?" />
 
+    <TextView
+        android:id="@+id/choice"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="coarse accuracy selected (default)" />
 
-</android.support.constraint.ConstraintLayout>
+    <CheckBox
+        android:id="@+id/fineAccuracy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fine accuracy" />
+
+    <Button
+        android:id="@+id/chooseRadio"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK" />
+
+    <TextView
+        android:id="@+id/prov"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="No provider selected yet"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/lat"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Latitude: -"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/lon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Longitude: -"
+        android:textSize="20dp" />
+
+</LinearLayout>
