--- a/app/src/main/res/layout/content_alagemandiha.xml
+++ b/app/src/main/res/layout/content_alagemandiha.xml
@@ -10,6 +10,8 @@
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
+            android:padding="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_height="?attr/actionBarSize"
             android:id="@+id/toolbar2">
 
@@ -17,9 +19,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="right"
-                android:padding="5dp"
                 android:orientation="horizontal"
-                android:layout_weight="4.5">
+                android:layout_weight="5">
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
