--- a/app/src/main/res/layout/activity__liste__moshaverine__markaz.xml
+++ b/app/src/main/res/layout/activity__liste__moshaverine__markaz.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="azad.hallaji.farzad.com.masirezendegi.ListeTaxassosHa">
-
+    android:layout_margin="20dp"
+    tools:context="azad.hallaji.farzad.com.masirezendegi.ListeMoshaverin">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ListeTxassoshaListView"
+        android:id="@+id/ListeMoshaverinMarakezListView"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp"
         tools:ignore="MissingConstraints">
-
     </ListView>
+
+
+
 
 </android.support.design.widget.CoordinatorLayout>
