--- a/app/src/main/res/layout/activity_page_virayesh.xml
+++ b/app/src/main/res/layout/activity_page_virayesh.xml
@@ -35,8 +35,19 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textColor="#fff"
+                android:layout_margin="5dp"
                 android:id="@+id/virayeshTextinToolbar"
                 android:text="ویرایش"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:textColor="#fff"
+                android:id="@+id/zaxireTextinToolbar"
+                android:text="دخیره "/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,12 +55,14 @@
                 android:layout_weight="1">
 
             </LinearLayout>
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
                 android:id="@+id/menuButton"
-                android:src="@drawable/menu_icon"/>
+                android:layout_gravity="right"
+                android:src="@drawable/ic_menu_white"/>
 
         </LinearLayout>
 
