--- a/app/src/main/res/layout/content_alagemandiha.xml
+++ b/app/src/main/res/layout/content_alagemandiha.xml
@@ -21,25 +21,37 @@
                 android:gravity="right"
                 android:orientation="horizontal"
                 android:layout_weight="5">
+
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="10dp"
                     android:id="@+id/backButton"
                     android:layout_gravity="right"
-                    android:src="@drawable/menu_icon"/>
+                    android:src="@drawable/ic_chevron_left_white"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="right"
                     android:layout_weight="2">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#ffffff"
+                        android:textSize="20dp"
+                        android:text="علاقه مندی ها"/>
                 </LinearLayout>
+
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="10dp"
                     android:id="@+id/menuButton"
                     android:layout_gravity="right"
-                    android:src="@drawable/menu_icon"/>
+
+                    android:src="@drawable/ic_menu_white"/>
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
