--- a/app/src/main/res/layout/pageporseshha2.xml
+++ b/app/src/main/res/layout/pageporseshha2.xml
@@ -20,11 +20,31 @@
             android:layout_height="match_parent"
             android:gravity="right">
             <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:id="@+id/backButton"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_chevron_left_white"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="مراکز"
+                    android:layout_gravity="center"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp"/>
+            </LinearLayout>
+            <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
                 android:id="@+id/menuButton"
-                android:src="@drawable/menu_icon"/>
+                android:layout_gravity="right"
+                android:src="@drawable/ic_menu_white"/>
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
