--- a/app/src/main/res/layout/pageporseshha2.xml
+++ b/app/src/main/res/layout/pageporseshha2.xml
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
             android:gravity="right">
             <ImageView
             android:layout_width="30dp"
@@ -33,7 +34,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="مراکز"
+                    android:text="پرسش ها"
+                    android:id="@+id/dashshshaqx"
                     android:layout_gravity="center"
                     android:textColor="#ffffff"
                     android:textSize="20dp"/>
