--- a/app/src/main/res/layout/activity_pasoxe_porsesh.xml
+++ b/app/src/main/res/layout/activity_pasoxe_porsesh.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layoutDirection="ltr"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.PasoxePorsesh">
