--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -5,6 +5,7 @@
     android:background="@drawable/explainpage"
     android:baselineAligned="false"
     android:id="@+id/lay2"
+    android:layoutDirection="ltr"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
