--- a/app/src/main/res/layout/footer_view.xml
+++ b/app/src/main/res/layout/footer_view.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/loadingPanel"
+    android:layoutDirection="ltr"
     android:gravity="center"
     android:orientation="vertical">
 
