--- a/app/src/main/res/layout/item_alagemandiha.xml
+++ b/app/src/main/res/layout/item_alagemandiha.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_margin="20dp"
+    android:layoutDirection="ltr"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,12 +22,14 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_weight="1"
+                android:layout_gravity="right"
                 android:id="@+id/typeAlagemandiTextView"
                 android:text="مشاور"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_gravity="left"
                 android:layout_weight="1"
                 android:text=" نوع :"/>
         </LinearLayout>
