--- a/app/src/main/res/layout/item_moshaverin.xml
+++ b/app/src/main/res/layout/item_moshaverin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layoutDirection="ltr"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/item_icon"
-            android:src="@drawable/asadicon"
             android:layout_weight="3"/>
 
 
