--- a/app/src/main/res/layout/item_taxassos.xml
+++ b/app/src/main/res/layout/item_taxassos.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layoutDirection="ltr"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,54 +18,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_margin="10dp"
             android:layout_weight="1">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="asasadfddggdf"
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:textColor="#e78f02"
-                android:textSize="20dp"
-                android:id="@+id/OnvanePorseshTextView"
-                android:gravity="right"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:id="@+id/HasChildTextView"
-                android:gravity="right"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="1321"
                     android:layout_margin="4dp"
                     android:padding="3dp"
-                    android:layout_gravity="right"
-                    android:id="@+id/SID"
+                    android:layout_weight="1"
+                    android:id="@+id/HasChildTextView"
                     android:gravity="right"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:padding="3dp"
+                    android:text="زیر شاخه    :"
+                    android:gravity="left"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight=".7"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="asasadfddggdf"
+                        android:layout_margin="4dp"
+                        android:padding="3dp"
+                        android:textColor="#e78f02"
+                        android:textSize="20dp"
+                        android:id="@+id/OnvanePorseshTextView"
+                        android:gravity="right"/>
+                </LinearLayout>
             </LinearLayout>
-
-
 
 
         </LinearLayout>
 
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="match_parent"
-            android:layout_height="60sp"
-            android:id="@+id/user_img"
-            app:civ_border_color="#a54"
-            android:layout_weight="3"/>
     </LinearLayout>
 
 </LinearLayout>
