--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
+    android:layoutDirection="ltr"
     android:fitsSystemWindows="true"
     android:background="@drawable/header_background"
     android:orientation="vertical"
@@ -37,7 +38,7 @@
                 android:id="@+id/profile_image"
                 android:layout_width="match_parent"
                 android:layout_height="96dp"
-                app:civ_border_width="2dp"
+                app:civ_border_width="5dp"
                 app:civ_border_color="#ccbbbb"/>
         </LinearLayout>
 
