--- a/app/src/main/res/layout/item_porseshha.xml
+++ b/app/src/main/res/layout/item_porseshha.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:gravity="center">
 
 
@@ -33,33 +33,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
-                android:layout_margin="4dp"
+                android:layout_marginRight="70dp"
                 android:padding="3dp"
+                android:gravity="right"
                 android:id="@+id/MatnePorseshTextView"
-                android:gravity="right"/>
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="right"
                 android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="1321"
-                    android:layout_margin="4dp"
-                    android:padding="3dp"
-                    android:layout_gravity="right"
-                    android:id="@+id/AnswerCount"
-                    android:gravity="right"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="1321"
-                    android:layout_margin="4dp"
-                    android:padding="3dp"
-                    android:layout_gravity="right"
-                    android:id="@+id/QID"
-                    android:gravity="right"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="1321"
+                        android:layout_margin="4dp"
+                        android:padding="3dp"
+                        android:layout_gravity="right"
+                        android:id="@+id/AnswerCount"
+                        android:gravity="right"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="1321"
+                        android:layout_margin="4dp"
+                        android:padding="3dp"
+                        android:layout_gravity="right"
+                        android:id="@+id/QID"
+                        android:gravity="right"/>
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -67,13 +78,6 @@
 
         </LinearLayout>
 
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="match_parent"
-            android:layout_height="60sp"
-            android:id="@+id/user_img"
-            app:civ_border_color="#a54"
-            android:layout_weight="3"/>
     </LinearLayout>
 
 </LinearLayout>
