--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="50dp"
-        android:layout_weight="10"
+        android:layout_weight="9"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:gravity="right"
             android:padding="5dp"
             android:orientation="horizontal"
-            android:layout_weight="4.5">
+            android:layout_weight="8">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -49,51 +49,85 @@
                 android:layout_gravity="right"
                 android:src="@drawable/ic_menu_white"/>
         </LinearLayout>
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adviser_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#ccbbbb"
-            android:layout_weight="3"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-
-            <TextView
+            android:layout_weight="5">
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adviser_about_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="نام مشاور در این قسمت است"
-                android:textColor="#f3f3fa"
-                android:id="@+id/name_moshaver_textview"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
-            <TextView
+                app:civ_border_width="2dp"
+                android:layout_margin="30dp"
+                android:src="@drawable/rezerv"
+                android:layout_weight="1"
+                app:civ_border_color="#ccbbbb" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_weight="1"
+                android:id="@+id/adviser_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="کارشناس زبان"
-                android:textColor="#f3f3fa"
-                android:id="@+id/taxassose_moshaver_textview"
-                android:gravity="center"
-                android:layout_weight="1"/>
-            <TextView
+                app:civ_border_width="2dp"
+                app:civ_border_color="#ccbbbb" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adviser_reserve_img"
+                android:layout_weight="1"
+                android:layout_margin="30dp"
+                android:src="@drawable/rezerx"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="کد کارشناس 245"
-                android:textColor="#f3f3fa"
-                android:id="@+id/code_moshaver_textview"
-                android:gravity="center"
-                android:layout_weight="1"/>
-
+                app:civ_border_width="2dp"
+                app:civ_border_color="#ccbbbb" />
         </LinearLayout>
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="نام مشاور در این قسمت است"
+                android:textColor="#f3f3fa"
+                android:id="@+id/name_moshaver_textview"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="کارشناس زبان"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/name_moshaver_textview"
+                android:textColor="#f3f3fa"
+                android:id="@+id/taxassose_moshaver_textview"
+                android:gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="کد کارشناس 245"
+                android:textColor="#f3f3fa"
+                android:layout_below="@+id/taxassose_moshaver_textview"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/code_moshaver_textview"
+                android:gravity="center"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:id="@+id/alagestar"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
