--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <!--<item
+        <item
             android:id="@+id/nav_profile"
-            android:title="پروفایل"/>-->
+            android:title="پروفایل"/>
         <item
             android:id="@+id/nav_login"
             android:title="ورود به سیستم" />
@@ -17,9 +17,9 @@
         <item
             android:id="@+id/nav_porseshha"
             android:title="پرسش ها" />
-        <!--<item
+        <item
             android:id="@+id/nav_logout"
-            android:title="خروج" />-->
+            android:title="خروج" />
     </group>
 
 
