--- a/app/src/main/res/layout/activity_liste_taxassosha.xml
+++ b/app/src/main/res/layout/activity_liste_taxassosha.xml
@@ -7,15 +7,27 @@
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.ListeTaxassosHa">
 
-
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ListeTxassoshaListView"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:ignore="MissingConstraints">
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:text="موضوع سوال خود را انتخاب نمایید :"/>
 
-    </ListView>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_margin="20dp"
+            android:layout_height="match_parent"
+            android:id="@+id/ListeTxassoshaListView"
+            tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:ignore="MissingConstraints">
+
+        </ListView>
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
