--- a/app/src/main/res/layout/content_porseshejadid.xml
+++ b/app/src/main/res/layout/content_porseshejadid.xml
@@ -12,16 +12,16 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:padding="5dp"
-            android:layout_weight="13"
             android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:id="@+id/toolbar2">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="right"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="5">
 
                 <ImageView
                     android:layout_width="30dp"
@@ -42,7 +42,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="#ffffff"
                         android:textSize="20dp"
-                        android:text="سیستم رزرو"/>
+                        android:text="پرسش جدید"/>
                 </LinearLayout>
 
                 <ImageView
@@ -51,6 +51,7 @@
                     android:layout_margin="10dp"
                     android:id="@+id/menuButton"
                     android:layout_gravity="right"
+
                     android:src="@drawable/ic_menu_white"/>
             </LinearLayout>
 
@@ -60,26 +61,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
-                android:id="@+id/Titlasdfghgfds"
-                android:text="زمان حضور در مرکز "/>
+                android:gravity="center"
+                android:text="سوال خود را در زیر مطرح نمایید :"/>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_margin="20dp"
-                android:id="@+id/Listerezerva"
-                android:layout_height="match_parent"/>
+            <EditText
+                android:layout_width="250dp"
+                android:layout_height="370dp"
+                android:padding="20dp"
+                android:textSize="12dp"
+                android:id="@+id/edittextsoal"
+                android:background="#e6e4e4"
+                android:layout_gravity="center"
+                android:gravity="top|right"/>
+
+            <Button
+                android:layout_width="70dp"
+                android:layout_margin="17dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:id="@+id/buttonersalsoal"
+                android:text="ارسال"
+                android:textColor="#FFF"
+                android:background="@drawable/login_button"/>
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
