--- a/app/src/main/res/layout/item_taxassos.xml
+++ b/app/src/main/res/layout/item_taxassos.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         android:layout_margin="10dp"
         android:gravity="center">
 
@@ -25,35 +25,34 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="4dp"
-                    android:padding="3dp"
-                    android:layout_weight="1"
-                    android:id="@+id/HasChildTextView"
-                    android:gravity="right"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="4dp"
-                    android:layout_weight="1"
-                    android:padding="3dp"
-                    android:text="زیر شاخه    :"
-                    android:gravity="left"/>
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:id="@+id/haschildimageview"
+                        android:src="@drawable/arrow_icon_down"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_weight=".7"
+                    android:orientation="horizontal"
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="asasadfddggdf"
                         android:layout_margin="4dp"
                         android:padding="3dp"
                         android:textColor="#e78f02"
+                        android:layout_weight="1"
                         android:textSize="20dp"
                         android:id="@+id/OnvanePorseshTextView"
+                        android:gravity="right"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text=" عنوان :"
+                        android:layout_margin="4dp"
+                        android:padding="3dp"
+                        android:layout_weight="4"
                         android:gravity="right"/>
                 </LinearLayout>
             </LinearLayout>
