--- a/app/src/main/res/layout/activity_liste_porseshha.xml
+++ b/app/src/main/res/layout/activity_liste_porseshha.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.ListePorseshha">
 
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,14 +17,13 @@
 
     </ListView>
 
-
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|start"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#3da961"
+        app:srcCompat="@drawable/fub" />
 
 </android.support.design.widget.CoordinatorLayout>
