--- a/app/src/main/res/layout/activity_page_liecence.xml
+++ b/app/src/main/res/layout/activity_page_liecence.xml
@@ -7,13 +7,10 @@
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.PageLiecence">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:padding="10dp"
-        android:textColor="#000"
-        android:layout_centerInParent="true"
-        android:id="@+id/licenceTextView"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="25dp"
+        android:id="@+id/lisenseid"/>
 
 </RelativeLayout>
