--- a/app/src/main/res/layout/activity_page_virayesh.xml
+++ b/app/src/main/res/layout/activity_page_virayesh.xml
@@ -10,237 +10,12 @@
     tools:context="azad.hallaji.farzad.com.masirezendegi.PageVirayesh"
     tools:openDrawer="end">
 
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@drawable/mohaverinpage"
-        android:baselineAligned="false"
-        android:id="@+id/lay2"
-        android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <android.support.v7.widget.Toolbar
+    <include
+        layout="@layout/adalsmlsknsdvsdv"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/toolbar2"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
+        android:layout_height="match_parent"
+        />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="right">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:textColor="#fff"
-                android:layout_margin="5dp"
-                android:id="@+id/virayeshTextinToolbar"
-                android:text="ویرایش"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:textColor="#fff"
-                android:id="@+id/zaxireTextinToolbar"
-                android:text="دخیره "/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:id="@+id/menuButton"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_menu_white"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.Toolbar>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1.2">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_margin="20dp"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="نام"
-                    android:id="@+id/nameTextViewVirayesh"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_weight="1"/>
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint=" نام خانوادگی"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:id="@+id/nameXanevadeTextViewVirayesh"
-                    android:layout_weight="1"/>
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint=" معرفی اجمالی"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:id="@+id/marefiyejmaliTextViewVirayesh"
-                    android:layout_weight="1"/>
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5">
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/user_image"
-                    android:id="@+id/imageviewuserVirayesh"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="20dp"
-            android:layout_weight="1">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="ایمیل"
-                android:id="@+id/emailTextViewVirayesh"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint=" تلفن ثابت"
-                android:id="@+id/telefonTextViewVirayesh"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="تلفن همراه"
-                android:id="@+id/gushuTextViewVirayesh"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint=" معرفی"
-                android:id="@+id/introTextViewVirayesh"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
-
-            <RadioGroup
-                android:id="@+id/radioGrp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-                <RadioButton
-                    android:id="@+id/radioM"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:checked="true"
-                    android:text="مرد"
-                    android:gravity="left|center"
-                    android:layout_weight="1"/>
-                <RadioButton
-                    android:id="@+id/radioF"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:checked="false"
-                    android:gravity="left|center"
-                    android:text="زن"
-                    android:layout_weight="1"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-            </RadioGroup>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:id="@+id/maxtimeTextViewVirayesh"
-                    android:hint="بیشترین زمان مشاوره"/>
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:id="@+id/costimeTextViewVirayesh"
-                    android:gravity="center"
-                    android:hint="هزینه مشاوره (دقیقه ای)"/>
-
-            </LinearLayout>
-
-
-
-    </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:padding="15dp"
-                android:id="@+id/marefiTextViewVirayesh"
-                android:hint="من یک مشاور موفق هستم...."
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
