--- a/app/src/main/res/layout/activity_pasoxe_porsesh.xml
+++ b/app/src/main/res/layout/activity_pasoxe_porsesh.xml
@@ -5,77 +5,146 @@
     android:layout_width="match_parent"
     android:layoutDirection="ltr"
     android:orientation="vertical"
+    android:background="@drawable/mohaverinpage"
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.PasoxePorsesh">
 
-    <LinearLayout
-        android:padding="20dp"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
+        android:padding="5dp"
+        android:layout_weight="9"
+        android:layout_marginBottom="10dp"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="3">
+        android:id="@+id/toolbar2">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="تاریخ :"
-            android:layout_weight="2"
-            android:layout_gravity="bottom"
-            android:gravity="end"
-            android:id="@+id/TarixePorsesh"
-            android:layout_marginLeft="15dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/MozueSoalTextView"
-            android:textColor="#fa731e"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:text="موضوع سوال : "/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="موضوع سوال :"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:textColor="#000"
-            android:layout_marginLeft="15dp"/>
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:layout_weight="3">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/OnvaneSoalTextView"
-            android:textColor="#fa731e"
-            android:text="موضوع سوال : "/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="عنوان سوال :"
-            android:textColor="#000"
-            android:layout_marginLeft="15dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-        <ListView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/ListepasoxhaListView"
-            android:padding="25dp"/>
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="10dp"
+                android:id="@+id/backButton"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_chevron_left_white"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:layout_weight="2">
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="10dp"
+                android:id="@+id/menuButton"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_menu_white"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="3.3">
+            <LinearLayout
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layoutDirection="ltr"
+                android:orientation="horizontal"
+                android:layout_weight="4">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="6">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/alage0"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:layoutDirection="ltr"
+                    android:layout_weight="1">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/MozueSoalTextView"
+                        android:textColor="#fa731e"
+                        android:layout_weight="1"
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center"
+                        android:text="موضوع سوال : "/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="موضوع سوال :"
+                        android:layout_gravity="center"
+                        android:textColor="#000"
+                        android:layout_marginLeft="15dp"/>
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="right"
+                android:layout_weight="3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2.5dp"
+                    android:text="عنوان سوال :"
+                    android:textColor="#000"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2.5dp"
+                    android:id="@+id/OnvaneSoalTextView"
+                    android:textColor="#000"
+                    android:text="عنوان سوال  : "/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/ListepasoxhaListView"
+                android:padding="25dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
