--- a/app/src/main/res/layout/content_explain_marakez.xml
+++ b/app/src/main/res/layout/content_explain_marakez.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="10"
+        android:layout_weight="11"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:gravity="right"
             android:padding="5dp"
             android:orientation="horizontal"
-            android:layout_weight="5.7">
+            android:layout_weight="10">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -55,56 +55,65 @@
             android:layout_height="match_parent"
             app:civ_border_width="2dp"
             app:civ_border_color="#ccbbbb"
-            android:layout_weight="5"/>
+            android:layout_weight="7"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:layout_marginBottom="30dp"
-            android:orientation="vertical">
+            android:layout_weight="8"
+            android:layoutDirection="ltr"
+            android:orientation="horizontal">
 
-            <TextView
+
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="نام مرکز در این قسمت است"
-                android:textColor="#f3f3fa"
-                android:id="@+id/name_markaz_textview"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
-            <RelativeLayout
+                android:padding="20dp"
+                android:id="@+id/alagestarmarkaz"
+                android:layout_weight="4"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight=".9">
+                android:orientation="vertical"
+                android:layout_weight="2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="م مشاور در این قسمت است"
+                    android:textColor="#f3f3fa"
+                    android:layout_gravity="center"
+                    android:id="@+id/name_markaz_textview"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="کارشناس زبان"
+                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/name_moshaver_textview"
                     android:textColor="#f3f3fa"
                     android:id="@+id/taxassose_markaz_textview"
-                    android:gravity="center"
-                    android:layout_centerHorizontal="true"/>
+                    android:gravity="center"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="کد کارشناس 245"
-                    android:layout_margin="5dp"
                     android:textColor="#f3f3fa"
+                    android:layout_below="@+id/taxassose_moshaver_textview"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@id/taxassose_markaz_textview"
                     android:id="@+id/code_markaz_textview"
                     android:gravity="center"/>
+            </LinearLayout>
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:id="@+id/alagestarmarkaz"/>
-
-
-            </RelativeLayout>
-
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"/>
 
         </LinearLayout>
 
