--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -12,8 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="50dp"
-        android:layout_weight="9"
+        android:layout_weight="11"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +20,7 @@
             android:gravity="right"
             android:padding="5dp"
             android:orientation="horizontal"
-            android:layout_weight="8">
+            android:layout_weight="10">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -53,7 +52,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5">
+            android:layout_weight="7">
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/adviser_about_img"
@@ -85,49 +84,65 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="8"
-            android:layout_gravity="bottom"
-            android:gravity="bottom"
-            android:orientation="vertical">
+            android:layoutDirection="ltr"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="نام مشاور در این قسمت است"
-                android:textColor="#f3f3fa"
-                android:id="@+id/name_moshaver_textview"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:textStyle="bold"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="کارشناس زبان"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/name_moshaver_textview"
-                android:textColor="#f3f3fa"
-                android:id="@+id/taxassose_moshaver_textview"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="کد کارشناس 245"
-                android:textColor="#f3f3fa"
-                android:layout_below="@+id/taxassose_moshaver_textview"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/code_moshaver_textview"
-                android:gravity="center"/>
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
-                android:id="@+id/alagestarmarkaz"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
+                android:id="@+id/alagestarmarkaz"
+                android:layout_weight="4"/>
 
-        </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="م مشاور در این قسمت است"
+                    android:textColor="#f3f3fa"
+                    android:layout_gravity="center"
+                    android:id="@+id/name_moshaver_textview"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="کارشناس زبان"
+                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/name_moshaver_textview"
+                    android:textColor="#f3f3fa"
+                    android:id="@+id/taxassose_moshaver_textview"
+                    android:gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="کد کارشناس 245"
+                    android:textColor="#f3f3fa"
+                    android:layout_below="@+id/taxassose_moshaver_textview"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/code_moshaver_textview"
+                    android:gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"/>
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
