--- a/app/src/main/res/layout/item_markaz.xml
+++ b/app/src/main/res/layout/item_markaz.xml
@@ -10,50 +10,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:layout_weight="1"
         android:gravity="center">
-        <LinearLayout
+
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"/>
+            android:layout_height="90dp"
+            android:id="@+id/item_icon"
+            android:src="@drawable/yahligade"
+            android:layout_weight="2"/>
 
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:textColor="#e78f02"
-                android:textSize="20dp"
-                android:id="@+id/AdviserName"
-                android:gravity="right"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:id="@+id/Tag"
-                android:gravity="right"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:layout_gravity="right"
-                android:id="@+id/IDCommentCount"
-                android:gravity="right"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"/>
-
+            android:layout_height="90dp"
+            android:text="asasadfddggdf"
+            android:layout_gravity="center"
+            android:textColor="#e78f02"
+            android:textSize="20dp"
+            android:layout_weight=".1"
+            android:id="@+id/AdviserName"
+            android:gravity="right|center"/>
     </LinearLayout>
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:id="@+id/user_img"
+        android:layout_gravity="center"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#3d51a9"
+        android:layout_weight="4"/>
 </LinearLayout>
