--- a/app/src/main/res/layout/item_moshaverin.xml
+++ b/app/src/main/res/layout/item_moshaverin.xml
@@ -11,18 +11,12 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:gravity="center">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:id="@+id/item_icon"
-            android:layout_weight="3"/>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1.8">
 
             <TextView
                 android:layout_width="match_parent"
@@ -37,33 +31,58 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
                 android:layout_margin="4dp"
                 android:padding="3dp"
                 android:id="@+id/Tag"
                 android:gravity="right"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="کد کارشناس :12311  1321323 "
-                android:layout_margin="4dp"
-                android:padding="3dp"
-                android:layout_gravity="right"
-                android:id="@+id/IDCommentCount"
-                android:gravity="right"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:layoutDirection="ltr"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/item_icon"
+                    android:src="@drawable/yahligade"
+                    android:layout_weight="8.5"/>
 
-
-
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:layout_margin="5dp"
+                    android:id="@+id/commentinnazrioml"
+                    android:layout_weight="6"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/arkan"
+                    android:src="@drawable/furuhe"
+                    android:layout_weight="8.5"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:id="@+id/IDCommentCount"
+                    android:layout_weight="6"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="کد کارشناس: "
+                    android:layout_gravity="right"
+                    android:gravity="right"/>
+            </LinearLayout>
         </LinearLayout>
-
-
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="match_parent"
-            android:layout_height="60sp"
+            android:layout_height="90dp"
             android:id="@+id/user_img"
-            app:civ_border_color="#a54"
-            android:layout_weight="3"/>
+            app:civ_border_width="3dp"
+            app:civ_border_color="#3d51a9"
+            android:layout_weight="4"/>
     </LinearLayout>
 
 </LinearLayout>
