--- a/app/src/main/res/layout/item_porseshha.xml
+++ b/app/src/main/res/layout/item_porseshha.xml
@@ -26,14 +26,14 @@
                 android:layout_margin="4dp"
                 android:padding="3dp"
                 android:textColor="#e78f02"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:id="@+id/OnvanePorseshTextView"
                 android:gravity="right"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
-                android:layout_marginRight="70dp"
+                android:layout_marginRight="20dp"
                 android:padding="3dp"
                 android:gravity="right"
                 android:id="@+id/MatnePorseshTextView"
@@ -45,32 +45,57 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
+                    android:layoutDirection="ltr"
+                    android:orientation="horizontal"
                     android:layout_height="match_parent">
+
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="1321"
-                        android:layout_margin="4dp"
+                        android:layout_margin="10dp"
                         android:padding="3dp"
-                        android:layout_gravity="right"
+                        android:layout_gravity="right|center"
                         android:id="@+id/AnswerCount"
                         android:gravity="right"/>
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/arkan"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layoutDirection="ltr"
                     android:layout_weight="1"
+                    android:orientation="horizontal"
                     android:layout_height="match_parent">
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
                         android:text="1321"
-                        android:layout_margin="4dp"
                         android:padding="3dp"
-                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:layout_gravity="left|center"
                         android:id="@+id/QID"
                         android:gravity="right"/>
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_gravity="center"
+                        android:layout_height="20dp"
+                        android:src="@drawable/soxum"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layoutDirection="ltr"
+                    android:layout_weight="2"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"/>
+
+
             </LinearLayout>
 
 
